# SDL2-test

./: CMakeLists.txt  sdl2-config.cmake
CMakeProjectSDL/: CMakeLists.txt  CMakeProjectSDL.cpp  CMakeProjectSDL.h
