# CMakeList.txt : CMake project for CMakeProjectSDL, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeProjectSDL "CMakeProjectSDL.cpp" "CMakeProjectSDL.h")


# TODO: Add tests and install targets if needed.
